[package]
name = "bonding-curve-jup-sdk"
version = "0.1.0"
edition = "2021"
description = "Pure Rust Bonding Curve quoting SDK for Jupiter AMM integration"
license = "MIT"
readme = "README.md"
keywords = ["trends", "solana", "jupiter", "amm", "bonding-curve"]
repository = "https://github.com/trends-fun/bonding-curve-jup-sdk"
homepage = "https://github.com/trends-fun/bonding-curve-jup-sdk"
documentation = "https://github.com/trends-fun/bonding-curve-jup-sdk#readme"
include = [
    "src/**",
    "tests/fixtures/**",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "extraction_checklist.md",
]

[features]
default = []
jupiter-adapter = ["dep:anyhow", "dep:jupiter-amm-interface", "dep:rust_decimal"]

[dependencies]
anyhow = { version = "1", optional = true }
jupiter-amm-interface = { version = "=0.6.1", optional = true }
rust_decimal = { version = "1.40.0", optional = true }
solana-instruction = "=3.0.0"
solana-pubkey = { version = "=3.0.0", features = ["curve25519"] }
thiserror = "1"

[dev-dependencies]
base64 = "0.22"
solana-account = ">=2"
